# COSMIC-DB

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
apis/: base_models.py  models.old.py  models.py
apis/data_models/: chatboxes.py  configurations.py  roles.py  services.py  users.py
apis/table_models/: chatboxes.py  configurations.py  roles.py  services.py  statistics.py  users.py
app/: .dockerignore  FE.md  README.md  compose.yaml
app/backend/: README.md  main.py  pyproject.toml
app/backend/apis/: models.py
app/backend/apis/cruds/: users.py
app/backend/cores/: db.py
app/backend/routers/: home.py
app/doc/: GIT.md
app/docker/dockerfile/: fastapi.Dockerfile  pgadmin.Dockerfile
app/example/: pgadmin_configs.example.env  pgadmin_password.example.txt  postgres_configs.example.env
app/frontend/: README.md  package.json
backend/: .gitignore  README.md  pyproject.toml
backend/apis/: models.py
backend/apis/cruds/: roles.py  users.py
backend/cores/: api.py  db.py  env.py
backend/routers/api_endpoints/: chatboxes.py  models.py  roles.py  services.py  statistics.py  users.py
backend/routers/normal_endpoints/: cosmic.py  home.py  root.py
backend/todo/: Dockerfile  OAuth.md  README.md  api.py  docker-compose.postgres.yaml  postgress_setup.txt  todo.py
backend/todo/data/: checkmate_moves.csv
backend/todo/data/cosmic/statistic/: 04-2025.csv
backend/todo/modules/chess/: chess_gencot.py  chess_genfen.py  chess_qa_puzzle.py  chess_qa_quality.py
backend/todo/modules/code_generation/: code_generation.py
backend/todo/pipelines/: cosmic_pipeline.py
backend/todo/scripts/chatbot/: cosmic.sh  run_chatbot_docker.sh
backend/todo/scripts/configs/: config.yaml  config_updated.yaml
backend/todo/scripts/demo/: run_demo.sh
backend/todo/src/: opensi_cosmic.py
backend/todo/src/query_analyser/: query_analyser.py  user_prompt.py
backend/todo/src/services/: chess.py  qa.py  rag.py  vector_database.py
backend/todo/src/services/llms/: LLMBase.py  Ollama.py  llm.py
backend/todo/src/services/llms/prompts/: system_prompt.py
backend/todo/utils/: general.py  sanitise_input.py  statistics.py
cores/: api.py  db.py  env.py
doc/: GIT.md  REACT.md
docker/dockerfile/: fastapi.Dockerfile  pgadmin.Dockerfile  postgres.Dockerfile  react.Dockerfile
docker/dockerfile/ollama/: ollama.nvidia_gpu.Dockerfile
docker/dockerfiles/: fastapi.Dockerfile  pgadmin.Dockerfile  postgres.Dockerfile  react.Dockerfile  traefik.Dockerfile
docker/dockerfiles/ollama/: ollama.all_cpu.Dockerfile  ollama.amd_gpu.Dockerfile  ollama.nvidia_gpu.Dockerfile
example/: cosmic_configs.example.env  pgadmin_password.example.txt
examples/: cosmic_cfg.example.env  pgadmin_svr.example.json
examples/backend/: cosmic_fastapi.example.env  todo.env
migrations/: env.py
migrations/utils/: migration.sh
migrations/versions/: 8e266617f204_pre_populate_services_data.py  96121362751e_pre_populate_users_and_roles_data.py  a3e40b0c0b7b_pre_populate_configs_data.py
routers/api_endpoints/: chatboxes.py  configurations.py  models.py  roles.py  services.py  statistics.py  users.py
routers/normal_endpoints/: cosmic.py
scripts/: README.md
scripts/configs/: config.yaml
scripts/demos/: CosmicDemo.ps1  cosmic_demo.sh  cosmic_demo.zsh  cosmic_pgadmin.env  cosmic_postgres.env
scripts/utils/: cosmic_log.sh
todo/: .env  api.py  docker-compose.yaml  requirements.txt  start.sh
todo/data/: finetune_dataset.csv  test.csv
todo/modules/chess/: chess_gencot.py
todo/scripts/configs/: config.yaml
todo/src/: maps.py  opensi_cosmic.py
todo/src/query_analyser/: query_analyser.py
todo/src/services/: chess.py  qa.py  vector_database.py
todo/src/services/llms/: Ollama.py  llm.py  tokenizer.py
todo/utils/: chat_history.py  log_tool.py  statistics.py
types/: filter_params.py  json_schemas.py  tags.py
types/api_responses/: chatboxes.py  configurations.py  roles.py  services.py  users.py
utils/: pre_populate.py
