[project]
name = "CoSMIC-Backend"
version = "1.0.0"
description = "Cognitive System of Machine Intelligent Computing (backend system)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    # NOTE: Use 'psycopg[binary]' version on pord.
    "psycopg>=3.3.3",
    "sqlmodel>=0.0.37",
]
