# -------------------------------------------------------------------------------------------------------------
# File: pyproject.toml
# Project: Open Source Institute-Cognitive System of Machine Intelligent Computing (OpenSI-CoSMIC)
# Contributors:
#     Bing Tran <binhsan1307@gmail.com>
#
# Copyright (c) 2026 Open Source Institute
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
# documentation files (the "Software"), to deal in the Software without restriction, including without
# limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
# the Software, and to permit persons to whom the Software is furnished to do so, subject to the following
# conditions:
# 
# The above copyright notice and this permission notice shall be included in all copies or substantial
# portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
# LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
# -------------------------------------------------------------------------------------------------------------


[project]
name = "CoSMIC"
version = "0.1.0"
description = "Cognitive System of Machine Intelligent Computing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    # NOTE: Use 'psycopg[binary]' version on pord.
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.37",
    # TODO: Installed for now to get CoSMIC file working.
    "python-box>=7.4.1",
    "torch>=2.10.0",
    "ollama>=0.6.1",
    "transformers[torch]>=5.3.0",
    "peft>=0.18.1",
    "openai>=2.26.0",
    "pytz>=2026.1.post1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "chess>=1.11.2",
    "stockfish>=4.0.8",
    "pandas>=3.0.1",
]
